<resources>
    <string name="app_name">VisitacaoAMVCM</string>
    <string name="title_activity_visitantes">Visitantes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint">Nome do Visitante</string>
    <string name="Documento">Documento</string>
    <string name="pick_date">NascimentoVisitante</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login_do_usuario">Login do Usuário</string>
    <string name="Entrar">Entrar</string>
    <string name="n_o_tem_um_cadastro_cadastre_se_aqui">Não tem um cadastro? Cadastre-se Aqui</string>
</resources>