<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ligthGray"
        tools:context=".FormCadastro">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="154dp"
            android:layout_height="28dp"
            android:layout_marginTop="180dp"
            android:text="@string/cadastre_se"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="emailAddress"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/et_Senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPersonName|textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Email" />

        <Button
            android:id="@+id/btnCadastrarUsuario"
            android:layout_width="201dp"
            android:layout_height="48dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="256dp"
            android:background="#FF6E40"
            android:text="@string/cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Senha"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>